--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dompurify": "^3.1.7",
     "file-saver": "^2.0.5",
+    "html-react-parser": "^5.1.18",
+    "htmlparser2": "^9.1.0",
     "jszip": "^3.10.1",
     "lucide-react": "^0.454.0",
     "next": "14.2.5",
@@ -23,6 +26,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/dompurify": "^3.0.5",
     "@types/file-saver": "^2.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
