--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -15,6 +15,9 @@ jobs:
       - name: Build
         run: npm run build
 
+      - name: Verify build directory
+        run: ls -la build
+
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4
         with:
