adapt to nextjs

--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -17,8 +17,5 @@ jobs:
       - name: Build
         run: npm run build
 
-      - name: Deploy
-        uses: JamesIves/github-pages-deploy-action@v4
-        with:
-          BRANCH: gh-pages
-          FOLDER: build
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v4
