add github_token and publish_dir

--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -18,4 +18,8 @@ jobs:
         run: npm run build
 
       - name: Deploy to GitHub Pages
+        if: success()
         uses: peaceiris/actions-gh-pages@v4
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./public
