--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -12,10 +12,10 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Install dependencies
-        run: npm install
+        run: yarn install
 
       - name: Build
-        run: npm run build
+        run: yarn build
 
       - name: Deploy to GitHub Pages
         if: success()
