add menu and update logo

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "htmlparser2": "^9.1.0",
     "jszip": "^3.10.1",
     "lucide-react": "^0.454.0",
+    "motion": "^11.11.17",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
