--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-icons": "^1.3.1",
     "@radix-ui/react-scroll-area": "^1.2.1",
     "@radix-ui/react-slot": "^1.1.0",
@@ -23,6 +24,7 @@
     "lucide-react": "^0.454.0",
     "motion": "^11.11.17",
     "next": "14.2.5",
+    "next-intl": "^3.25.1",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.4",
