--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "@nextui-org/button": "^2.0.38",
     "@nextui-org/dropdown": "^2.1.31",
     "@nextui-org/input": "^2.2.5",
-    "@nextui-org/react": "^2.4.8",
     "@nextui-org/slider": "^2.2.17",
+    "@nextui-org/system": "^2.2.6",
+    "@nextui-org/theme": "^2.2.11",
     "@nextui-org/tooltip": "^2.0.41",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-icons": "^1.3.1",
@@ -25,7 +26,7 @@
     "clsx": "^2.1.1",
     "dompurify": "^3.1.7",
     "file-saver": "^2.0.5",
-    "framer-motion": "^11.11.17",
+    "framer-motion": "^11.13.1",
     "html-react-parser": "^5.1.18",
     "htmlparser2": "^9.1.0",
     "jszip": "^3.10.1",
