--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@nextui-org/button": "^2.0.38",
-    "@nextui-org/dropdown": "^2.1.31",
+    "@nextui-org/dropdown": "2.1.31",
     "@nextui-org/image": "^2.2.3",
     "@nextui-org/input": "^2.2.5",
     "@nextui-org/modal": "^2.2.3",
