--- a/package.json
+++ b/package.json
@@ -9,15 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@nextui-org/button": "^2.0.38",
-    "@nextui-org/dropdown": "2.1.31",
-    "@nextui-org/image": "^2.2.3",
-    "@nextui-org/input": "^2.2.5",
-    "@nextui-org/modal": "^2.2.3",
-    "@nextui-org/slider": "^2.2.17",
-    "@nextui-org/system": "^2.2.6",
-    "@nextui-org/theme": "^2.2.11",
-    "@nextui-org/tooltip": "^2.0.41",
+    "@heroui/button": "2.2.10",
+    "@heroui/dropdown": "2.3.10",
+    "@heroui/image": "2.2.6",
+    "@heroui/input": "2.4.10",
+    "@heroui/modal": "2.2.8",
+    "@heroui/slider": "2.4.8",
+    "@heroui/system": "2.4.7",
+    "@heroui/theme": "2.4.6",
+    "@heroui/tooltip": "2.2.8",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-icons": "^1.3.1",
     "@radix-ui/react-scroll-area": "^1.2.1",
@@ -58,5 +58,6 @@
   },
   "main": "index.js",
   "author": "Jhao <jhao413@qq.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "packageManager": "yarn@4.6.0"
 }
