✨ feat: remove unused search results state and update dependencies

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroui/dropdown": "2.3.10",
     "@heroui/image": "2.2.6",
     "@heroui/input": "2.4.10",
+    "@heroui/kbd": "^2.2.17",
     "@heroui/modal": "2.2.8",
     "@heroui/slider": "2.4.8",
     "@heroui/system": "2.4.7",
@@ -26,6 +27,7 @@
     "@radix-ui/react-tooltip": "^1.1.4",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
+    "@xmldom/xmldom": "^0.9.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
